--- a/src/styles/Pokemon.css
+++ b/src/styles/Pokemon.css
@@ -7,12 +7,29 @@
     padding:30px;
     width:605px;
     height:300px;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.pokemon-item-not-loaded {
+    position:absolute;
+    float:right;
+    margin-right:30px;
+    padding:30px;
+    width:610px;
+    height:310px;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color:white;
 }
 
 .pokemon-name-id {
     text-transform:capitalize;
     font-size:25px;
     position:absolute;
+    margin-left:5%;
 }
 
 .pokemon-image {
@@ -22,5 +39,14 @@
 .pokemon-div-types {
     display:flex;
     flex-direction: row;
-    align-items: space-between;
+    justify-content: center;
+    width:90%;
+}
+
+.pokemon-height-weight {
+    display:flex;
+    flex-direction:row;
+    justify-content: space-around;
+    margin-left:10%;
+    width:130%;
 }
