--- a/src/styles/Pokemon.css
+++ b/src/styles/Pokemon.css
@@ -6,10 +6,10 @@
     border:3px solid black;
     padding:30px;
     width:605px;
-    height:300px;
+    height:500px;
     display:flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .pokemon-item-not-loaded {
@@ -18,7 +18,7 @@
     margin-right:30px;
     padding:30px;
     width:610px;
-    height:310px;
+    height:510px;
     display:flex;
     flex-direction: row;
     justify-content: center;
@@ -47,6 +47,22 @@
     display:flex;
     flex-direction:row;
     justify-content: space-around;
-    margin-left:10%;
-    width:130%;
+    width:100%;
+}
+
+.pokemon-item-tertiary {
+    display:flex;
+    flex-direction:column;
+    justify-content: space-between;
+    height:40%;
+    width:50%;
+}
+
+.pokemon-genera,
+.pokemon-habitat,
+.pokemon-baby,
+.pokemon-mythical,
+.pokemon-legendary,
+.pokemon-shape {
+    margin-left:25%;
 }
